--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,27 +6,24 @@ on:
   pull_request:
     branches: [ main, develop ]
 
-
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: "3.11"
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.11"
+          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with ruff
-      - name: Test with pytest
+          pip install -r requirements.txt
+
+      - name: Run tests
         run: |
-          pytest tests/
+          pytest test/
