--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,12 +18,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.11"
-          
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
+      
       - name: Run tests
         run: |
-          pytest test/
+          python -m unittest discover -s tests -p test_*.py
